deployments/fotaas-deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas
  labels:
    app: fotaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotaas
  template:
    metadata:
      labels:
        app: fotaas
    spec:
      containers:
      #START telemetry service container
      - name: telemetry
        image: localhost:5000/fotaas/telemetry
        ports:
        - containerPort: 50051
      - name: analysis
        image: localhost:5000/fotaas/analysis
        ports:
        - containerPort: 50052
      - name: simulation
        image: localhost:5000/fotaas/simulation
        ports:
        - containerPort: 50053
      - name: fotaasctl
        image: localhost:5000/fotaas/fotaasctl
      #END fotaasctl container
      #START zipkin container
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=acoustic-skein-273916:us-central1:fotaasdb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
      #END cloudsql-proxy container
      volumes:
       - name: cloudsql-instance-credentials
         secret:
          secretName: cloudsql-instance-credentials
