deployments/simulation-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: simulation
  name: simulation
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: simulation
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: mysql
        - name: MICRO_ADDRESS
          value: :50053
        - name: WAIT_HOSTS
          value: mysql:3306
        image: localhost:5000/fotaas2/simulation
        name: simulation
        ports:
        - containerPort: 50053
        resources: {}
      restartPolicy: Always
status: {}
