deployments/analysis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  ports:
  - name: "50052"
    port: 50052
    targetPort: 50052
  selector:
    io.kompose.service: analysis
status:
  loadBalancer: {}
