deployments/fotaas-deployment-multi-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-telemetry
  labels:
    app: fotaas-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotaas-telemetry
  template:
    metadata:
      labels:
        app: fotaas-telemetry
    spec:
      containers:
      #START telemetry service container
      - name: fotaas-telemetry
        image: us.gcr.io/kubedemo-233218/fotaas/telemetry
        ports:
        - containerPort: 50051
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=kubedemo-233218:us-central1:kubedemodb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
      #END cloudsql-proxy container
      volumes:
       - name: cloudsql-instance-credentials
         secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-analysis
  labels:
    app: fotaas-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotaas-analysis
  template:
    metadata:
      labels:
        app: fotaas-analysis
    spec:
      containers:
      #START analysis service container
      - name: fotaas-analysis
        image: us.gcr.io/kubedemo-233218/fotaas/analysis
        ports:
        - containerPort: 50052
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=kubedemo-233218:us-central1:kubedemodb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
      #END cloudsql-proxy container
      volumes:
       - name: cloudsql-instance-credentials
         secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-simulation
  labels:
    app: fotaas-simulation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotaas-simulation
  template:
    metadata:
      labels:
        app: fotaas-simulation
    spec:
      containers:
      #START simulation service container
      - name: fotaas-simulation
        image: us.gcr.io/kubedemo-233218/fotaas/simulation
        ports:
        - containerPort: 50053
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=kubedemo-233218:us-central1:kubedemodb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: cloudsql-instance-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
      #END cloudsql-proxy container
      volumes:
       - name: cloudsql-instance-credentials
         secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-fotaasctl
  labels:
    app: fotaas-fotaasctl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fotaas-fotaasctl
  template:
    metadata:
      labels:
        app: fotaas-fotaasctl
    spec:
      containers:
      #START fotaasctl container
      - name: fotaasctl
        image: us.gcr.io/kubedemo-233218/fotaas/fotaasctl
      #END fotaasctl container
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-telemetry
  labels:
    app: fotaas-telemetry
spec:
  ports:
  - port: 50051
    protocol: TCP
  selector:
    app: fotaas-telemetry              
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-analysis
  labels:
    app: fotaas-analysis
spec:
  ports:
  - port: 50052
    protocol: TCP
  selector:
    app: fotaas-analysis
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-simulation
  labels:
    app: fotaas-simulation
spec:
  ports:
  - port: 50053
    protocol: TCP
  selector:
    app: fotaas-simulation
