deployments/simulation-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: simulation
  name: simulation
spec:
  ports:
  - name: "50053"
    port: 50053
    targetPort: 50053
  selector:
    io.kompose.service: simulation
status:
  loadBalancer: {}
