deployments/telemetry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: telemetry
  name: telemetry
spec:
  ports:
  - name: "50051"
    port: 50051
    targetPort: 50051
  selector:
    io.kompose.service: telemetry
status:
  loadBalancer: {}
