deployments/fotaas-deployment-gke.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-telemetry
  labels:
    app: fotaas-telemetry
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: fotaas-telemetry
  template:
    metadata:
      labels:
        app: fotaas-telemetry
    spec:
      containers:
      #START telemetry service container
      - name: fotaas-telemetry
        image: us.gcr.io/acoustic-skein-273916/fotaas/telemetry
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
        ports:
        - containerPort: 50051
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 15
          periodSeconds: 20        
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:9411
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=acoustic-skein-273916:us-central1:fotaasdb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: fotaas-gcp-service-acct-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:3306
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END cloudsql-proxy container
      volumes:
       - name: fotaas-gcp-service-acct-credentials
         secret:
          secretName: fotaas-gcp-service-acct-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-analysis
  labels:
    app: fotaas-analysis
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1  
  selector:
    matchLabels:
      app: fotaas-analysis
  template:
    metadata:
      labels:
        app: fotaas-analysis
    spec:
      containers:
      #START analysis service container
      - name: fotaas-analysis
        image: us.gcr.io/acoustic-skein-273916/fotaas/analysis
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
        ports:
        - containerPort: 50052
        readinessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 15
          periodSeconds: 20                
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:9411
          initialDelaySeconds: 15
          periodSeconds: 20                
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=acoustic-skein-273916:us-central1:fotaasdb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: fotaas-gcp-service-acct-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:3306
          initialDelaySeconds: 15
          periodSeconds: 20                               
      #END cloudsql-proxy container
      volumes:
       - name: fotaas-gcp-service-acct-credentials
         secret:
          secretName: fotaas-gcp-service-acct-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-simulation
  labels:
    app: fotaas-simulation
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1    
  selector:
    matchLabels:
      app: fotaas-simulation
  template:
    metadata:
      labels:
        app: fotaas-simulation
    spec:
      containers:
      #START simulation service container
      - name: fotaas-simulation
        image: us.gcr.io/acoustic-skein-273916/fotaas/simulation
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
        ports:
        - containerPort: 50053
        readinessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 15
          periodSeconds: 20                
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:9411
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=acoustic-skein-273916:us-central1:fotaasdb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: fotaas-gcp-service-acct-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:3306
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END cloudsql-proxy container
      volumes:
       - name: fotaas-gcp-service-acct-credentials
         secret:
          secretName: fotaas-gcp-service-acct-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-status
  labels:
    app: fotaas-status
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1    
  selector:
    matchLabels:
      app: fotaas-status
  template:
    metadata:
      labels:
        app: fotaas-status
    spec:
      containers:
      #START status service container
      - name: fotaas-status
        image: us.gcr.io/acoustic-skein-273916/fotaas/status
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
        ports:
        - containerPort: 50054
        readinessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 15
          periodSeconds: 20                
      - name: zipkin
        image: docker.io/openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:9411
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END zipkin container
      #Start cloudsql-proxy container
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy","-instances=acoustic-skein-273916:us-central1:fotaasdb=tcp:3306","-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
         runAsUser: 2  # non-root user
         allowPrivilegeEscalation: false
        volumeMounts:
         - name: fotaas-gcp-service-acct-credentials
           mountPath: /secrets/cloudsql
           readOnly: true
        livenessProbe:
          exec:
            command:
            - nc
            - -v
            - -z
            - 127.0.0.1:3306
          initialDelaySeconds: 15
          periodSeconds: 20           
      #END cloudsql-proxy container
      volumes:
       - name: fotaas-gcp-service-acct-credentials
         secret:
          secretName: fotaas-gcp-service-acct-credentials                    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-fotaasctl
  labels:
    app: fotaas-fotaasctl
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1    
  selector:
    matchLabels:
      app: fotaas-fotaasctl
  template:
    metadata:
      labels:
        app: fotaas-fotaasctl
    spec:
      containers:
      #START fotaasctl container
      - name: fotaasctl
        image: us.gcr.io/acoustic-skein-273916/fotaas/fotaasctl
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
      #END fotaasctl container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fotaas-web
  labels:
    app: fotaas-web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1      
  selector:
    matchLabels:
      app: fotaas-web
  template:
    metadata:
      labels:
        app: fotaas-web
    spec:
      containers:
      #START fotaasweb container
      - name: fotaas-web
        image: us.gcr.io/acoustic-skein-273916/fotaas/fotaasweb
        resources:
          requests:
            memory: "1500Mi"
            cpu: "660m"
          limits:
            memory: "1500Mi"
            cpu: "660m"
        #resources:
          #requests:
            #cpu: 1
        ports:
        - containerPort: 8080
      #END fotaasweb container      
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-telemetry
  labels:
    app: fotaas-telemetry
spec:
  ports:
  - port: 50051
    protocol: TCP
  selector:
    app: fotaas-telemetry              
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-analysis
  labels:
    app: fotaas-analysis
spec:
  ports:
  - port: 50052
    protocol: TCP
  selector:
    app: fotaas-analysis
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-simulation
  labels:
    app: fotaas-simulation
spec:
  ports:
  - port: 50053
    protocol: TCP
  selector:
    app: fotaas-simulation
---
apiVersion: v1
kind: Service
metadata:
  name: fotaas-status
  labels:
    app: fotaas-status
spec:
  ports:
  - port: 50054
    protocol: TCP
  selector:
    app: fotaas-status
---
apiVersion: v1
kind: Service
metadata:
  annotations:
   beta.cloud.google.com/backend-config: '{"ports": {"80":"fotaas-web-backend-config"}}'
  name: fotaas-web
  labels:
    app: fotaas-web
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    #name: http
  selector:
    app: fotaas-web
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fotaas-web-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "fotaas-web-static-ip"
    networking.gke.io/managed-certificates: planetix-certificate
spec:
  rules:
    - host: planetix.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: fotaas-web
              servicePort: 80
---
#apiVersion: networking.gke.io/v1beta1
#kind: ManagedCertificate
#metadata:
#  name: planetix-certificate
#spec:
#  domains:
#    - planetix.dev
